@@ -402,6 +402,35 @@ class Initialization(object):
         self.remote(log, log_file, changelog_txt, lib, lib_file, packages_txt,
                     md5_file, checksums_md5, lst_file, filelist_txt)
 
+    def slackl(self):
+        '''
+        Creating SalixOS local library
+        '''
+        ar = "i486"
+        arch = os.uname()[4]
+        repo = Repo().slackel()
+        log = log_path + "slackl/"
+        lib = lib_path + "slackl_repo/"
+        lib_file = "PACKAGES.TXT"
+        lst_file = ""
+        md5_file = "CHECKSUMS.md5"
+        log_file = "ChangeLog.txt"
+        if not os.path.exists(log):
+            os.mkdir(log)
+        if not os.path.exists(lib):
+            os.mkdir(lib)
+        if arch == "x86_64":
+            ar = "x86_64"
+        packages_txt = "{0}{1}/current/{2}".format(repo, ar, lib_file)
+        filelist_txt = ""
+        checksums_md5 = "{0}{1}/current/{2}".format(repo, ar, md5_file)
+        changelog_txt = "{0}{1}/current/{2}".format(repo, ar, log_file)
+        self.write(lib, lib_file, packages_txt)
+        self.write(lib, md5_file, checksums_md5)
+        self.write(log, log_file, changelog_txt)
+        self.remote(log, log_file, changelog_txt, lib, lib_file, packages_txt,
+                    md5_file, checksums_md5, lst_file, filelist_txt)
+
     @staticmethod
     def write(path, data_file, file_url):
         '''
