@@ -2,13 +2,14 @@ Version 2.1.5-dev
 26-12-2014
 
 [Feature] - Added slacker.it, slackonly.com, Alien's ktown, Alien's multilib,
-            Slacke E17 and E18, SalixOS, repositories.
+            Slacke E17 and E18, SalixOS and Slackel repositories.
           - Added command 're-create'.
           - Added command 'repolist'.
           - Added command 'repoinfo'. 
 
 [Updated] - Fix Slackware current upgrade checksums.
           - Fix ingore hiden files in /var/log/packages/ path.
+          - Fix arguments.
 
 Version 2.1.4
 16-12-2014
